--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"@angular/platform-browser": "~8.1.2",
 		"@angular/platform-browser-dynamic": "~8.1.2",
 		"@angular/router": "~8.1.2",
+		"@capacitor/cli": "^2.2.0",
+		"@capacitor/core": "^2.2.0",
 		"@ionic-native/core": "^5.0.0",
 		"@ionic-native/splash-screen": "^5.0.0",
 		"@ionic-native/status-bar": "^5.0.0",
